# SRL

./: .gitignore  CITATION.cff  LICENSE  README.md  TUTORIAL.md  pyproject.toml
.github/workflows/: ci.yml
srl/: __init__.py  spg.py  vfi.py
srl/utils/: __init__.py  discretize.py  plotting.py  safe_linalg.py
tutorials/: 00_household_numpy.ipynb  00_household_numpy.py  01_household_jax.ipynb  01_household_jax.py  02_household_policy_gradient.ipynb  02_household_policy_gradient.py  03_household_moving_prices.ipynb  03_household_moving_prices.py  04_ge_huggett.ipynb  04_ge_huggett.py  05_ge_huggett_agg_risk.ipynb  05_ge_huggett_agg_risk.py  build_notebooks.py  calibration.py
tutorials/data/: README.md  nb0_reference.npz
tutorials/data/ssj_huggett/: a_grid.npy  distribution.npy  e_grid.npy  e_trans.npy  prices.npy  savings.npy
